# TimeWatcher

./: .gitignore  Makefile.am  README.md  bootstrap.sh  configure.ac
check/: images  out.ref
src/: Makefile.am  clockdetect.cc  clockdetect.hh  clockreader.hh  main.cc  mask.cc  mask.hh  sauvola.cc  sauvola.hh  timereader.cc  timereader.cc.orig  timereader.hh
tests/: data.py  main.py
